--- a/读写excel.ipynb
+++ b/读写excel.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'0.20.1'"
+       "'0.20.5'"
       ]
      },
-     "execution_count": 291,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32,10 +32,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 85,
+   "metadata": {},
    "outputs": [],
    "source": [
     "app = xls.App(visible=True,add_book=True)"
@@ -50,10 +48,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 86,
+   "metadata": {},
    "outputs": [],
    "source": [
     "wb = app.books.add()"
@@ -68,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +90,7 @@
        "<Book [工作簿1]>"
       ]
      },
-     "execution_count": 295,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +110,7 @@
        "<Book [工作簿1]>"
       ]
      },
-     "execution_count": 296,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,10 +145,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 91,
+   "metadata": {},
    "outputs": [],
    "source": [
     "wb=app.books.open('基准书1.xlsx')"
@@ -167,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -215,12 +209,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 获取分页符下面的行号"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for sht in wb.sheets:\n",
+    "    for pb in sht.api.HPageBreaks:\n",
+    "        print(sht,pb.Location.Row)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 显示页眉"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +339,7 @@
        " '检查方法']"
       ]
      },
-     "execution_count": 303,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +373,7 @@
        "'$C$4:$K$5'"
       ]
      },
-     "execution_count": 304,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +404,7 @@
        "'$X$4'"
       ]
      },
-     "execution_count": 305,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -447,12 +459,77 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 删除行，列"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#删除行\n",
+    "wb.sheets[\"正本\"][\"34:34\"].delete()\n",
+    "#删除列\n",
+    "wb.sheets[\"正本\"][\"BB:BB\"].delete()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 修改边框\n",
+    "LineStyle = 1 直线  \n",
+    "LineStyle = 2 虚线  \n",
+    "LineStyle = 4 点划线  \n",
+    "LineStyle = 5 双点划线  \n",
+    "Weight：设置边框线粗细  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rng=wb.sheets[\"正本\"]['A1:E10']\n",
+    "LineStyle = 5\n",
+    "\n",
+    "# Borders(7) 左边框\n",
+    "rng.api.Borders(7).LineStyle = LineStyle\n",
+    "rng.api.Borders(7).Weight = 2\n",
+    "\n",
+    "# Borders(8) 顶部框\n",
+    "rng.api.Borders(8).LineStyle = LineStyle\n",
+    "rng.api.Borders(8).Weight = 2\n",
+    "\n",
+    "# 底边框\n",
+    "rng.api.Borders(9).LineStyle = LineStyle\n",
+    "rng.api.Borders(9).Weight = 2\n",
+    "\n",
+    "# Borders(10) 右边框\n",
+    "rng.api.Borders(10).LineStyle = LineStyle\n",
+    "rng.api.Borders(10).Weight = 2\n",
+    "                    \n",
+    "# # Borders(11) 内部垂直边线。\n",
+    "rng.api.Borders(11).LineStyle = LineStyle\n",
+    "rng.api.Borders(11).Weight = 2\n",
+    " \n",
+    "# # Borders(12) 内部水平边线。\n",
+    "rng.api.Borders(12).LineStyle = LineStyle\n",
+    "rng.api.Borders(12).Weight = 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 获取表格中的形状"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +538,7 @@
        "Shapes([<Shape 'TextBox 1' in <Sheet [基准书1.xlsx]正本>>, <Shape 'Comment 1' in <Sheet [基准书1.xlsx]正本>>, <Shape 'Comment 2' in <Sheet [基准书1.xlsx]正本>>, ...])"
       ]
      },
-     "execution_count": 307,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -518,10 +595,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 52,
+   "metadata": {},
    "outputs": [],
    "source": [
     "wb.sheets[\"1\"].api.Copy()\n",
@@ -540,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 54,
    "metadata": {
     "scrolled": true
    },
@@ -599,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,10 +708,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 57,
+   "metadata": {},
    "outputs": [],
    "source": [
     "sht2['A25'].options(transpose=True).value=[1, 2, 3,4]"
@@ -651,10 +724,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 58,
+   "metadata": {},
    "outputs": [],
    "source": [
     "wb2.save(\"复制的工作表.xlsx\")"
@@ -679,14 +750,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n"
+      "H:\\学习资料\\编程学习\\pathon\\基础操作\\excel批处理\n"
      ]
     }
    ],
@@ -707,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +803,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
