增加格式刷 自动填充 公式计算
Signed-off-by: 102757017 <sdf63fg@yeah.net>

--- a/读写excel.ipynb
+++ b/读写excel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "'0.20.5'"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
        "<Book [工作簿1]>"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
        "<Book [工作簿1]>"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
        " '检查方法']"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
        "'$C$4:$K$5'"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
        "'$X$4'"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +538,7 @@
        "Shapes([<Shape 'TextBox 1' in <Sheet [基准书1.xlsx]正本>>, <Shape 'Comment 1' in <Sheet [基准书1.xlsx]正本>>, <Shape 'Comment 2' in <Sheet [基准书1.xlsx]正本>>, ...])"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -590,12 +590,121 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 自动填充\n",
+    "Type：根据源范围的内容指定如何填充目标范围  \n",
+    "\n",
+    "\n",
+    "| Name               | Value | Description                                                  |\n",
+    "| :----------------- | :---- | :----------------------------------------------------------- |\n",
+    "| **xlFillCopy**     | 1     | Copy the values and formats from the source range to the target range, repeating if necessary. |\n",
+    "| **xlFillDays**     | 5     | Extend the names of the days of the week in the source range into the target range. Formats are copied from the source range to the target range, repeating if necessary. |\n",
+    "| **xlFillDefault**  | 0     | Excel determines the values and formats used to fill the target range. |\n",
+    "| **xlFillFormats**  | 3     | Copy only the formats from the source range to the target range, repeating if necessary. |\n",
+    "| **xlFillMonths**   | 7     | Extend the names of the months in the source range into the target range. Formats are copied from the source range to the target range, repeating if necessary. |\n",
+    "| **xlFillSeries**   | 2     | Extend the values in the source range into the target range as a series (for example, '1, 2' is extended as '3, 4, 5'). Formats are copied from the source range to the target range, repeating if necessary. |\n",
+    "| **xlFillValues**   | 4     | Copy only the values from the source range to the target range, repeating if necessary. |\n",
+    "| **xlFillWeekdays** | 6     | Extend the names of the days of the workweek in the source range into the target range. Formats are copied from the source range to the target range, repeating if necessary. |\n",
+    "| **xlFillYears**    | 8     | Extend the years in the source range into the target range. Formats are copied from the source range to the target range, repeating if necessary. |\n",
+    "| **xlGrowthTrend**  | 10    | Extend the numeric values from the source range into the target range, assuming that the relationships between the numbers in the source range are multiplicative (for example, '1, 2,' is extended as '4, 8, 16', assuming that each number is a result of multiplying the previous number by some value). Formats are copied from the source range to the target range, repeating if necessary. |\n",
+    "| **xlLinearTrend**  | 9     | Extend the numeric values from the source range into the target range, assuming that the relationships between the numbers is additive (for example, '1, 2,' is extended as '3, 4, 5', assuming that each number is a result of adding some value to the previous number). Formats are copied from the source range to the target range, repeating if necessary. |\n",
+    "| **xlFlashFill**    | 11    | Extend the values from the source range into the target range based on the detected pattern of previous user actions, repeating if necessary. |"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wb.sheets[\"正本\"]['C16:K17'].api.AutoFill(Destination=wb.sheets[\"正本\"]['C16:K33'].api,Type=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 选择性粘贴\n",
+    "Paste：指定粘贴的类型\n",
+    "\n",
+    "| 名称                                    | 值    | 描述                             |\n",
+    "| :-------------------------------------- | :---- | :------------------------------- |\n",
+    "| **xlPasteAll**                          | -4104 | 一切都会被粘贴。                 |\n",
+    "| **xlPasteAllExceptBorders**             | 7     | 除边框外的所有内容都会粘贴。     |\n",
+    "| **xlPasteAllMergingConditionalFormats** | 14    | 将粘贴所有内容，并合并条件格式。 |\n",
+    "| **xlPasteAllUsingSourceTheme**          | 13    | 一切都将使用源主题进行粘贴。     |\n",
+    "| **xlPasteColumnWidths**                 | 8     | 粘贴复制的列宽。                 |\n",
+    "| **xlPasteComments**                     | -4144 | 注释已粘贴。                     |\n",
+    "| **xlPasteFormats**                      | -4122 | 复制的源格式已粘贴。             |\n",
+    "| **xlPasteFormulas**                     | -4123 | 粘贴公式。                       |\n",
+    "| **xlPasteFormulasAndNumberFormats**     | 11    | 粘贴公式和数字格式。             |\n",
+    "| **xlPasteValidation**                   | 6     | 验证粘贴。                       |\n",
+    "| **xlPasteValues**                       | -4163 | 值已粘贴。                       |\n",
+    "| **xlPasteValuesAndNumberFormats**       | 12    | 粘贴值和数字格式。               |\n",
+    "\n",
+    "Operation：指定如何使用工作表上的目标单元格计算数字数据。  \n",
+    "\n",
+    "| 名称                            | 值    | 描述                                   |\n",
+    "| ------------------------------- | ----- | -------------------------------------- |\n",
+    "| xlPasteSpecialOperationAdd      | 2     | 复制的数据将添加到目标单元格中的值。   |\n",
+    "| xlPasteSpecialOperationDivide   | 5     | 复制的数据将在目标单元格中分割该值。   |\n",
+    "| xlPasteSpecialOperationMultiply | -4    | 复制的数据将乘以目标单元格中的值。     |\n",
+    "| xlPasteSpecialOperationNone     | -4142 | 粘贴操作将不进行任何计算。             |\n",
+    "| xlPasteSpecialOperationSubtract | 3     | 复制的数据将从目标单元格中的值中减去。 |\n",
+    "\n",
+    "SkipBlanks：跳过空单元格  \n",
+    "\n",
+    "Transpose：转置  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wb.sheets[\"正本\"]['C4:K5'].api.Copy()\n",
+    "wb.sheets[\"正本\"]['C6:K17'].api.PasteSpecial(Paste=-4122,Operation=-4142,SkipBlanks=False,Transpose=False)\n",
+    "#情况剪切板，如果不写这句代码会出现提示窗口:是否保存复制的内容到剪贴板,以便下次使用\n",
+    "app.api.CutCopyMode=False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 输入公式，相应单元格执行结果"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wb.sheets[\"正本\"][\"A1\"].formula='=SUM(B6:B7)' "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 复制一个sheet（此处用到了vba的函数，api后面可以使用任意vba函数）"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 59,
    "metadata": {
     "scrolled": true
    },
@@ -674,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -708,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -724,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -750,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
